Details
-
Bug
-
Resolution: Fixed
-
Major
-
Operating System: ReactOS
Platform: x86 Hardware
URL: http://archive.services.openoffice.org/pub/openoffice-archive/stable/1.1.5/OOo_1.1.5_Win32Intel_install.zip
-
October (0.3.15 first half)
-
48,002
-
5641
Description
Reported and regress-tested by Igorko, confirmed by me. Happens in 48910, on VBox 3.2.8. The progress bar appears only for the moment. This bug is introduced by revision 48002. No related debug log, nor error mesage in ROS.
Attachments
Issue Links
- blocks
-
CORE-867 OpenOffice: v 1.x.x displays garbled text in setup and app itself
-
- Resolved
-
- is blocked by
-
CORE-7100 kernel32: dir: "filename*.*" expression does not find files without extensions
-
- Resolved
-
-
CORE-7127 OpenOffice1: v1.1.5 setup crashes at start
-
- Closed
-
-
ROSTESTS-104 Test for FindFirstFile
-
- Resolved
-