[KERNEL32] Implement support for WC translation to DOS so that they are correctly passed to FsRtlIs*InExpression() Please retest issues CORE-5125 and CORE-7100

svn path=/trunk/; revision=58814